fix gap

--- a/app/frontend/stylesheets/features/_advanced-search.scss
+++ b/app/frontend/stylesheets/features/_advanced-search.scss
@@ -157,7 +157,6 @@ $CORNER_RADIUS: calc($HEIGHT / 2);
         // 値が多い条件でも行全体を押し広げすぎないよう、値エリアだけをスクロール可能にする
         flex-grow: 1;
         flex-wrap: wrap;
-        row-gap: 2px;
         align-items: center;
         max-height: 100px;
         padding: var(--padding-values-vertical) $CORNER_RADIUS
